@@ -3,19 +3,20 @@ import org.jlleitschuh.gradle.ktlint.tasks.KtLintCheckTask
 import org.openapitools.generator.gradle.plugin.tasks.GenerateTask
 import org.owasp.dependencycheck.reporting.ReportGenerator.Format.HTML
 import org.springframework.boot.gradle.tasks.bundling.BootBuildImage
+import java.lang.ProcessBuilder.Redirect
 
 plugins {
-    id("org.springframework.boot") version "2.7.5"
+    id("org.springframework.boot") version "2.7.11"
     id("io.spring.dependency-management") version "1.1.0"
-    kotlin("jvm") version "1.7.20"
-    kotlin("kapt") version "1.7.20"
-    kotlin("plugin.spring") version "1.7.0"
-    kotlin("plugin.jpa") version "1.7.20"
-    kotlin("plugin.allopen") version "1.7.20"
-    id("org.jlleitschuh.gradle.ktlint") version "10.3.0"
-    id("org.jlleitschuh.gradle.ktlint-idea") version "10.3.0"
-    id("org.openapi.generator") version "6.2.0"
-    id("org.owasp.dependencycheck") version "7.2.0"
+    kotlin("jvm") version "1.8.10"
+    kotlin("kapt") version "1.8.10"
+    kotlin("plugin.spring") version "1.8.10"
+    kotlin("plugin.jpa") version "1.8.10"
+    kotlin("plugin.allopen") version "1.8.10"
+    id("org.jlleitschuh.gradle.ktlint") version "11.0.0"
+    id("org.jlleitschuh.gradle.ktlint-idea") version "11.0.0"
+    id("org.openapi.generator") version "6.2.1"
+    id("org.owasp.dependencycheck") version "8.2.1"
     id("org.jsonschema2dataclass") version "4.5.0"
 }
 
@@ -24,7 +25,6 @@ version = "latest"
 java.sourceCompatibility = JavaVersion.VERSION_17
 
 ext["snakeyaml.version"] = "1.33"
-ext["spring-security.version"] = "5.7.5" // Fixed CVE-2022-31690 and CVE-2022-31692 - https://spring.io/blog/2022/10/31/cve-2022-31690-privilege-escalation-in-spring-security-oauth2-client
 extra["springCloudVersion"] = "2.4.2"
 extra["awsSdkVersion"] = "2.18.9"
 
@@ -32,8 +32,18 @@ allOpen {
     annotations("javax.persistence.Entity", "javax.persistence.MappedSuperclass", "javax.persistence.Embedabble")
 }
 
+val awsProfile = System.getenv("AWS_PROFILE_ARG") ?: "--profile code-artifact"
+val codeArtifactToken = "aws codeartifact get-authorization-token --domain erop-artifacts --domain-owner 063998039290 --query authorizationToken --output text $awsProfile".runCommand()
+
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://erop-artifacts-063998039290.d.codeartifact.eu-west-2.amazonaws.com/maven/api-repo/")
+        credentials {
+            username = "aws"
+            password = codeArtifactToken
+        }
+    }
 }
 
 apply(plugin = "org.jlleitschuh.gradle.ktlint")
@@ -56,16 +66,22 @@ dependencies {
     implementation("org.mapstruct:mapstruct:1.5.3.Final")
     kapt("org.mapstruct:mapstruct-processor:1.5.3.Final")
 
+    // internal libs
+    implementation("uk.gov.dluhc:logging-library:0.0.2")
+
     // api
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-web")
-    implementation("org.springdoc:springdoc-openapi-ui:1.6.12")
+    implementation("org.springdoc:springdoc-openapi-ui:1.6.15")
     implementation("org.springframework.boot:spring-boot-starter-validation")
-    implementation("com.opencsv:opencsv:5.7.0") {
+    implementation("com.opencsv:opencsv:5.7.1") {
         exclude("commons-collections", "commons-collections")
         exclude("org.apache.commons", "commons-text")
     }
     implementation("org.springframework.integration:spring-integration-sftp")
+
+    // Logging
+    runtimeOnly("net.logstash.logback:logstash-logback-encoder:7.3")
 
     // webclient
     implementation("org.springframework:spring-webflux")
@@ -74,11 +90,13 @@ dependencies {
     // spring security
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+    // later version of nimbus-jose-jwt than brought in transitively by spring security - earlier version triggers CVE-2023-1370
+    implementation("com.nimbusds:nimbus-jose-jwt:9.31")
 
     // mysql
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.liquibase:liquibase-core")
-    runtimeOnly("mysql:mysql-connector-java")
+    runtimeOnly("com.mysql:mysql-connector-j")
     runtimeOnly("software.aws.rds:aws-mysql-jdbc:1.1.1")
     runtimeOnly("software.amazon.awssdk:rds")
 
@@ -87,28 +105,33 @@ dependencies {
 
     // AWS v2 dependencies
     implementation("software.amazon.awssdk:s3")
+    // email
+    implementation("software.amazon.awssdk:ses")
 
     // mongo core datatypes, so that we can generate a Mongo ObjectId (a 12 byte/24 char hex string ID)
     implementation("org.mongodb:bson:4.7.1")
 
-    // Schedulling
+    // Scheduling
     implementation("net.javacrumbs.shedlock:shedlock-spring:4.42.0")
     implementation("net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.42.0")
+
+    // OpenPDF
+    implementation("com.github.librepdf:openpdf:1.3.30")
 
     // Test implementations
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.springframework.boot:spring-boot-starter-webflux")
 
-    testImplementation("org.testcontainers:junit-jupiter:1.17.5")
+    testImplementation("org.testcontainers:junit-jupiter:1.17.6")
     testImplementation("org.awaitility:awaitility-kotlin:4.2.0")
-    testImplementation("org.mockito.kotlin:mockito-kotlin:4.0.0")
+    testImplementation("org.mockito.kotlin:mockito-kotlin:4.1.0")
 
-    testImplementation("org.testcontainers:testcontainers:1.17.5")
-    testImplementation("org.testcontainers:mysql:1.17.5")
+    testImplementation("org.testcontainers:testcontainers:1.17.6")
+    testImplementation("org.testcontainers:mysql:1.17.6")
 
-    testImplementation("com.github.tomakehurst:wiremock-jre8:2.34.0")
-    testImplementation("net.datafaker:datafaker:1.6.0")
+    testImplementation("com.github.tomakehurst:wiremock-jre8:2.35.0")
+    testImplementation("net.datafaker:datafaker:1.8.0")
 
     // Libraries to support creating JWTs in tests
     testImplementation("io.jsonwebtoken:jjwt-impl:0.11.5")
@@ -133,6 +156,7 @@ tasks.withType<KotlinCompile> {
 tasks.withType<Test> {
     dependsOn(tasks.withType<GenerateTask>())
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
 }
 
 tasks.withType<GenerateTask> {
@@ -245,6 +269,15 @@ kapt {
     }
 }
 
+fun String.runCommand(): String {
+    val parts = this.split("\\s".toRegex())
+    val process = ProcessBuilder(*parts.toTypedArray())
+        .redirectOutput(Redirect.PIPE)
+        .start()
+    process.waitFor()
+    return process.inputStream.bufferedReader().readText().trim()
+}
+
 /* Configuration for the OWASP dependency check */
 dependencyCheck {
     autoUpdate = true
@@ -252,6 +285,6 @@ dependencyCheck {
     failBuildOnCVSS = 0.toFloat()
     analyzers.assemblyEnabled = false
     analyzers.centralEnabled = true
-    format = HTML
+    format = HTML.name
     suppressionFiles = listOf("owasp.suppressions.xml")
 }
